Design changes, fix navbar on small screens, add scrolling images to index page.

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Open Sans', 'Helvetica', sans-serif;
+  background-color: #FAFAFF;
+}
+
 #content {
   padding: 15px;
   min-height: 500px;
@@ -42,14 +47,52 @@
 }
 
 a {
-  color: #88B6E7;
+  color: #68A7EA;
 }
 
 a:hover {
-  color: #88B6E7;
+  color: #68A7EA;
 }
 
 #sidebar {
   position: fixed;
   top: 120px;
+}
+
+.carousel {
+  max-width: 700px;
+  max-height: 550px;
+}
+
+.navbar {
+  background-color: #FCFCFC;
+}
+
+.navbar-brand {
+  padding: 20px;
+}
+
+.navbar-brand .name {
+  font-size: 24px;
+  margin: 2px;
+}
+
+.navbar-brand .fine-art {
+  font-family: 'Satisfy', cursive;
+  margin: 10px 5px 5px 5px;
+  float: right;
+  font-size: 32px;
+  padding-right: 15px;
+}
+
+.navbar-nav li a {
+  line-height: 60px;
+  font-size: 16px;
+}
+
+img.detail-img {
+  -webkit-box-shadow: 6px 6px 5px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 6px 6px 5px -2px rgba(0,0,0,0.75);
+  box-shadow: 6px 6px 5px -2px rgba(0,0,0,0.75);
+  max-width: 620px;
 }
